[package]
name = "rust_tower_defense"
version = "0.1.0"
authors = ["Chris Czub <chris.czub@gmail.com>"]
edition = "2018"
license = "MIT"
description = "The Rust Tower Defense project, blogged at https://czub.us/blog/rust_gamedev/"

[dependencies]
rand = "0.6.5"
serde = "1.0.87"
serde_json = "1.0.38"
serde_derive = "1.0.87"
bincode = "1.1.1"
winit = "0.18.1"
glsl-to-spirv = "=0.1.7"
image = "0.21.0"
env_logger = "0.6.0"
log = "0.4.6"
arrayvec = "0.4.10"
shaderc = "0.3"

[dependencies.gfx-backend-gl]
version = "0.1"
features = ["glutin"]
optional = true

[dependencies.gfx-backend-vulkan]
version = "0.1"
#git = "https://github.com/gfx-rs/gfx"
optional = true
#rev = "c16898e3"

[target.'cfg(any(target_os = "macos", all(target_os = "ios", target_arch = "aarch64")))'.dependencies.gfx-backend-metal]
optional = true
version = "0.1"
#rev = "c16898e3"
#git = "https://github.com/gfx-rs/gfx"

[target.'cfg(windows)'.dependencies.gfx-backend-dx12]
optional = true
version = "0.1"
#rev = "c16898e3"
#git = "https://github.com/gfx-rs/gfx"

[dependencies.gfx-hal]
version = "0.1"
#git = "https://github.com/gfx-rs/gfx"
#rev = "c16898e3"

[build-dependencies]
glsl-to-spirv = "=0.1.7"

[features]
default = []
metal = ["gfx-backend-metal"]
gl = ["gfx-backend-gl"]
dx12 = ["gfx-backend-dx12"]
vulkan = ["gfx-backend-vulkan"]
unstable = []

[[bin]]
name = "client"
path = "src/bin/rtd.rs"
