[package]
name = "rust_tower_defense"
version = "0.1.0"
authors = ["Chris Czub <chris.czub@gmail.com>"]
edition = "2018"
license = "MIT"
description = "The Rust Tower Defense project, blogged at https://czub.us/blog/rust_gamedev/"

[dependencies]
rand = "0.6.5"
serde = "1.0.87"
serde_json = "1.0.38"
serde_derive = "1.0.87"
bincode = "1.1.1"
glsl-to-spirv = "=0.1.7"
image = "0.21"
env_logger = "0.6.0"
log = "0.4"
arrayvec = "0.4.10"
shaderc = "0.3"
vulkano = "0.11"
vulkano-shaders = "0.11"
vulkano-win = "0.11"
cgmath = "0.16"
winit = "0.18"
time = "0.1.37"

[build-dependencies]
glsl-to-spirv = "=0.1.7"

[features]
default = []
unstable = []

[[bin]]
name = "client"
path = "src/bin/rtd.rs"